--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,8 @@ Mako==1.2.3
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 msgpack==1.0.4
+aiohttp==3.8.0
+aiosignal==1.2.0
 openai==0.27.8
 outcome==1.2.0
 parse==1.19.0
