build(docker): 优化Dockerfile中的pip安装命令
使用--no-cache-dir选项减少镜像体积，并固定依赖版本以提高构建稳定性

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,9 +11,9 @@ RUN apk add --no-cache --virtual .build-deps \
     && if [ "$(uname -m)" = "x86_64" ]; then ARCH=amd64; elif [ "$(uname -m)" = "aarch64" ]; then ARCH=arm64; fi \
     && curl https://dl.min.io/client/mc/release/linux-${ARCH}/mc --create-dirs -o /usr/bin/mc \
     && chmod +x /usr/bin/mc \
-    && pip install --upgrade pip setuptools wheel \
-    && pip install cython \
-    && pip install -r https://raw.githubusercontent.com/jackloves111/9/refs/heads/master/requirements.txt \
+    && pip install --no-cache-dir --upgrade pip==23.2.1 setuptools==68.2.2 wheel==0.41.3 \
+    && pip install --no-cache-dir "cython<3" \
+    && pip install --no-cache-dir --no-build-isolation -r https://raw.githubusercontent.com/jackloves111/9/refs/heads/master/requirements.txt \
     && apk del --purge .build-deps \
     && rm -rf /tmp/* /root/.cache /var/cache/apk/*
 COPY --chmod=755 ./rootfs /
